refactor: demo with html code preview

--- a/projects/demo/src/app/app.component.scss
+++ b/projects/demo/src/app/app.component.scss
@@ -48,3 +48,11 @@
     margin-bottom: 0.7rem;
   }
 }
+
+.editorHtml {
+  margin-top: 8px;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 8px;
+}
