--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -3,11 +3,16 @@
     <div class="display">
       <div class="logo">
         <img src="/ngx-editor.svg" alt="ngx-editor" />
-        <div class="subtitle">Rich Text Editor for angular using ProseMirror</div>
+        <div class="subtitle">
+          Rich Text Editor for angular using ProseMirror
+        </div>
       </div>
       <div class="badges" *ngIf="!isDevMode">
         <img src="https://badgen.net/npm/v/ngx-editor" alt="version" />
-        <img src="https://badgen.net/npm/dm/ngx-editor" alt="downloads per month " />
+        <img
+          src="https://badgen.net/npm/dm/ngx-editor"
+          alt="downloads per month "
+        />
         <img src="https://badgen.net/npm/dt/ngx-editor" alt="total downloads" />
         <img src="https://badgen.net/npm/license/ngx-editor" alt="license" />
       </div>
@@ -15,9 +20,16 @@
 
     <form [formGroup]="form">
       <div class="editor NgxEditor__Wrapper">
-        <ngx-editor-menu [editor]="editor" [toolbar]="toolbar" [customMenuRef]="customMenu"> </ngx-editor-menu>
+        <ngx-editor-menu
+          [editor]="editor"
+          [toolbar]="toolbar"
+          [customMenuRef]="customMenu"
+        >
+        </ngx-editor-menu>
         <ngx-editor [editor]="editor" formControlName="editorContent">
-          <ngx-editor-floating-menu [editor]="editor"></ngx-editor-floating-menu>
+          <ngx-editor-floating-menu
+            [editor]="editor"
+          ></ngx-editor-floating-menu>
         </ngx-editor>
       </div>
     </form>
@@ -31,5 +43,9 @@
     <ng-template #customMenu>
       <app-custom-menu [editor]="editor"></app-custom-menu>
     </ng-template>
+
+    <div class="editorHtml">
+      {{ html }}
+    </div>
   </div>
 </div>
