--- a/projects/ngx-editor/src/lib/modules/menu/menu.component.html
+++ b/projects/ngx-editor/src/lib/modules/menu/menu.component.html
@@ -1,28 +1,58 @@
 <div
   class="NgxEditor__MenuBar"
-  [ngClass]="{ 'NgxEditor--Disabled': disabled, 'NgxEditor__MenuBar--Reverse': dropdownPlacement === 'top' }"
+  [ngClass]="{
+    'NgxEditor--Disabled': disabled,
+    'NgxEditor__MenuBar--Reverse': dropdownPlacement === 'top',
+  }"
 >
-  <ng-container *ngFor="let toolbarItem of toolbar; let lastToolbarItem = last; trackBy: trackByIndex">
-    <ng-container *ngFor="let item of toolbarItem; let lastItem = last; trackBy: trackByIndex">
+  <ng-container
+    *ngFor="
+      let toolbarItem of toolbar;
+      let lastToolbarItem = last;
+      trackBy: trackByIndex
+    "
+  >
+    <ng-container
+      *ngFor="
+        let item of toolbarItem;
+        let lastItem = last;
+        trackBy: trackByIndex
+      "
+    >
       <!-- toggle icons -->
-      <ngx-toggle-command [toolbarItem]="item" [class]="iconContainerClass" *ngIf="toggleCommands.includes(item)">
+      <ngx-toggle-command
+        [toolbarItem]="item"
+        [class]="iconContainerClass"
+        *ngIf="toggleCommands.includes(item)"
+      >
       </ngx-toggle-command>
 
-      <ngx-insert-command [toolbarItem]="item" [class]="iconContainerClass" *ngIf="insertCommands.includes(item)">
+      <ngx-insert-command
+        [toolbarItem]="item"
+        [class]="iconContainerClass"
+        *ngIf="insertCommands.includes(item)"
+      >
       </ngx-insert-command>
 
       <!-- link -->
       <ng-container *ngIf="isLinkItem(item)">
-        <ngx-link [class]="iconContainerClass" [options]="getLinkOptions(item)"></ngx-link>
+        <ngx-link
+          [class]="iconContainerClass"
+          [options]="getLinkOptions(item)"
+        ></ngx-link>
       </ng-container>
 
       <!-- image -->
-      <ngx-image [class]="iconContainerClass" *ngIf="item === 'image'"> </ngx-image>
+      <ngx-image [class]="iconContainerClass" *ngIf="item === 'image'">
+      </ngx-image>
 
       <!-- dropdown -->
       <ng-container *ngIf="isDropDown(item)">
         <ngx-dropdown
-          *ngFor="let dropdownItem of getDropdownItems(item) | keyvalue; trackBy: trackByIndex"
+          *ngFor="
+            let dropdownItem of getDropdownItems(item) | keyvalue;
+            trackBy: trackByIndex
+          "
           [class]="dropdownContainerClass"
           [group]="dropdownItem.key"
           [items]="dropdownItem.value"
@@ -46,6 +76,8 @@
         [presets]="presets"
       >
       </ngx-color-picker>
+      <!-- Font Size -->
+      <ngx-font-size *ngIf="item === 'font_size'"></ngx-font-size>
 
       <!-- seperator -->
       <div [class]="seperatorClass" *ngIf="lastItem && !lastToolbarItem"></div>
